--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Link to the stylesheet -->
+
+  <!-- Link to the stylesheet -->
   <link rel="stylesheet" href="/stylesheet.css">
-  <title>Javascript Learning Notes</title>
+  
+  <title>Learning Notes</title>
 </head>
 <body>
   
